Added services section

--- a/index.html
+++ b/index.html
@@ -1,37 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaoshala - Cow Welfare</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <header class="navbar">
-        <div class="logo">Gaoshala<span>Care</span></div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Protecting our Sacred Mother</h1>
-            <p>Join us in our mission to provide a loving home for abandoned cows.</p>
-            <a href="#contact" class="btn">Donate Now</a>
+<section id="services" class="services-container">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <h3>Cow Care</h3>
+                <p>Providing daily nutrition, clean water, and a safe shelter for every cow.</p>
+            </div>
+            <div class="service-card">
+                <h3>Medical Aid</h3>
+                <p>24/7 veterinary support and regular health checkups for injured animals.</p>
+            </div>
+            <div class="service-card">
+                <h3>Organic Farming</h3>
+                <p>Using natural waste to create high-quality organic fertilizers.</p>
+            </div>
         </div>
     </section>
-
-    <section id="about" class="container">
-        <h2>Our Mission</h2>
-        <p>We provide medical care, fresh fodder, and a safe shelter for over 100+ cows. Our goal is to promote sustainable living through Vedic practices.</p>
-    </section>
-
-</body>
-</html>
