Full Website Reset

--- a/index.html
+++ b/index.html
@@ -1,4 +1,39 @@
-<section id="services" class="services-container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gaoshala - Cow Welfare & Seva</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header class="navbar">
+        <div class="logo">Gaoshala<span>Care</span></div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1>Protecting our Sacred Mother</h1>
+            <p>Join us in our mission to provide a loving home for abandoned cows.</p>
+            <a href="#contact" class="btn">Donate Now</a>
+        </div>
+    </section>
+
+    <section id="about" class="container">
+        <h2>Our Mission</h2>
+        <p>We provide medical care, fresh fodder, and a safe shelter for over 100+ cows. Our goal is to promote sustainable living through Vedic practices.</p>
+    </section>
+
+    <section id="services" class="services-container">
         <h2>Our Services</h2>
         <div class="services-grid">
             <div class="service-card">
@@ -15,3 +50,19 @@
             </div>
         </div>
     </section>
+
+    <section id="contact" class="container">
+        <h2>Contact Us</h2>
+        <div class="contact-info">
+            <p>📍 Village Road, Gaoshala District</p>
+            <p>📞 +91 98765 43210</p>
+            <p>✉️ help@gaoshala.org</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2026 Gaoshala Care. All Rights Reserved.</p>
+    </footer>
+
+</body>
+</html>
