--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
+                <section id="gallery" class="container">
+        <h2>Life at Gaoshala</h2>
+        <div class="gallery-grid">
+            <img src="https://images.unsplash.com/photo-1583623025817-d180a2221d0a?auto=format&fit=crop&w=500" alt="Cow 1">
+            <img src="https://images.unsplash.com/photo-1545468843-95bd6047e7f9?auto=format&fit=crop&w=500" alt="Cow 2">
+            <img src="https://images.unsplash.com/photo-1516467508483-a7212febe31a?auto=format&fit=crop&w=500" alt="Cow 3">
+        </div>
+    </section>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
