Final Professional Layout

--- a/index.html
+++ b/index.html
@@ -3,73 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaoshala - Cow Welfare & Seva</title>
+    <title>Gaoshala - Pure Cow Welfare</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="navbar">
+    <nav class="navbar">
         <div class="logo">Gaoshala<span>Care</span></div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <section id="gallery" class="container">
-        <h2>Life at Gaoshala</h2>
-        <div class="gallery-grid">
-            <img src="https://images.unsplash.com/photo-1583623025817-d180a2221d0a?auto=format&fit=crop&w=500" alt="Cow 1">
-            <img src="https://images.unsplash.com/photo-1545468843-95bd6047e7f9?auto=format&fit=crop&w=500" alt="Cow 2">
-            <img src="https://images.unsplash.com/photo-1516467508483-a7212febe31a?auto=format&fit=crop&w=500" alt="Cow 3">
-        </div>
-    </section>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Protecting our Sacred Mother</h1>
-            <p>Join us in our mission to provide a loving home for abandoned cows.</p>
-            <a href="#contact" class="btn">Donate Now</a>
+        <div class="hero-text">
+            <h1>Sustaining the Sacred</h1>
+            <p>Providing a lifelong sanctuary for abandoned and elderly cows.</p>
+            <a href="#contact" class="btn">Support Us</a>
         </div>
     </section>
 
-    <section id="about" class="container">
-        <h2>Our Mission</h2>
-        <p>We provide medical care, fresh fodder, and a safe shelter for over 100+ cows. Our goal is to promote sustainable living through Vedic practices.</p>
-    </section>
-
-    <section id="services" class="services-container">
-        <h2>Our Services</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <h3>Cow Care</h3>
-                <p>Providing daily nutrition, clean water, and a safe shelter for every cow.</p>
+    <section id="services" class="section">
+        <h2 class="section-title">Our Pillars of Care</h2>
+        <div class="grid">
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1546445317-29f4545e9d53?auto=format&fit=crop&w=300" alt="Care">
+                <h3>Daily Nutrition</h3>
+                <p>Fresh green fodder and pure water served with love every single day.</p>
             </div>
-            <div class="service-card">
-                <h3>Medical Aid</h3>
-                <p>24/7 veterinary support and regular health checkups for injured animals.</p>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?auto=format&fit=crop&w=300" alt="Med">
+                <h3>Medical Seva</h3>
+                <p>On-site veterinary care for injuries and age-related health issues.</p>
             </div>
-            <div class="service-card">
-                <h3>Organic Farming</h3>
-                <p>Using natural waste to create high-quality organic fertilizers.</p>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1597916829826-02e5bb4c54e0?auto=format&fit=crop&w=300" alt="Farm">
+                <h3>Vedic Farming</h3>
+                <p>Promoting organic agriculture using traditional cow-based fertilizers.</p>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="container">
-        <h2>Contact Us</h2>
-        <div class="contact-info">
-            <p>📍 Village Road, Gaoshala District</p>
-            <p>📞 +91 98765 43210</p>
-            <p>✉️ help@gaoshala.org</p>
+    <footer id="contact">
+        <div class="footer-content">
+            <h3>Contact Our Sanctuary</h3>
+            <p>📍 Near Haridwar Road, Gaoshala Village</p>
+            <p>📞 +91 98765 43210 | ✉️ seva@gaoshala.org</p>
         </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2026 Gaoshala Care. All Rights Reserved.</p>
     </footer>
 
 </body>
