--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaoshala - Pure Cow Welfare</title>
+    <title>Gaoshala - Cow Welfare</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <nav class="navbar">
         <div class="logo">Gaoshala<span>Care</span></div>
         <ul>
@@ -18,42 +17,36 @@
         </ul>
     </nav>
 
-    <section id="home" class="hero">
-        <div class="hero-text">
-            <h1>Sustaining the Sacred</h1>
-            <p>Providing a lifelong sanctuary for abandoned and elderly cows.</p>
-            <a href="#contact" class="btn">Support Us</a>
+    <header id="home" class="hero">
+        <div class="hero-content">
+            <h1>Protecting our Sacred Mother</h1>
+            <p>Providing a loving home for abandoned and elderly cows.</p>
+            <a href="#contact" class="btn">Donate Now</a>
         </div>
-    </section>
+    </header>
 
-    <section id="services" class="section">
-        <h2 class="section-title">Our Pillars of Care</h2>
+    <section id="services" class="container">
+        <h2>Our Services</h2>
         <div class="grid">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1546445317-29f4545e9d53?auto=format&fit=crop&w=300" alt="Care">
-                <h3>Daily Nutrition</h3>
-                <p>Fresh green fodder and pure water served with love every single day.</p>
+                <img src="https://images.unsplash.com/photo-1546445317-29f4545e9d53?w=500" alt="Cow">
+                <h3>Cow Care</h3>
+                <p>Nutritious food and a safe shelter for every cow.</p>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?auto=format&fit=crop&w=300" alt="Med">
-                <h3>Medical Seva</h3>
-                <p>On-site veterinary care for injuries and age-related health issues.</p>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1597916829826-02e5bb4c54e0?auto=format&fit=crop&w=300" alt="Farm">
-                <h3>Vedic Farming</h3>
-                <p>Promoting organic agriculture using traditional cow-based fertilizers.</p>
+                <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?w=500" alt="Vet">
+                <h3>Medical Aid</h3>
+                <p>24/7 veterinary support for our rescued residents.</p>
             </div>
         </div>
     </section>
 
     <footer id="contact">
-        <div class="footer-content">
-            <h3>Contact Our Sanctuary</h3>
-            <p>📍 Near Haridwar Road, Gaoshala Village</p>
-            <p>📞 +91 98765 43210 | ✉️ seva@gaoshala.org</p>
+        <div class="footer-info">
+            <h2>Contact Us</h2>
+            <p>📍 Main Road, Gaoshala Sanctuary</p>
+            <p>📞 +91 98765 43210</p>
         </div>
     </footer>
-
 </body>
 </html>
