--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaoshala - Cow Welfare</title>
+    <title>Gaoshala - Cow Welfare Sanctuary</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <nav class="navbar">
         <div class="logo">Gaoshala<span>Care</span></div>
         <ul>
@@ -20,33 +21,50 @@
     <header id="home" class="hero">
         <div class="hero-content">
             <h1>Protecting our Sacred Mother</h1>
-            <p>Providing a loving home for abandoned and elderly cows.</p>
+            <p>Providing a lifelong home and medical care for abandoned and elderly cows.</p>
             <a href="#contact" class="btn">Donate Now</a>
         </div>
     </header>
 
-    <section id="services" class="container">
-        <h2>Our Services</h2>
-        <div class="grid">
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1546445317-29f4545e9d53?w=500" alt="Cow">
-                <h3>Cow Care</h3>
-                <p>Nutritious food and a safe shelter for every cow.</p>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?w=500" alt="Vet">
-                <h3>Medical Aid</h3>
-                <p>24/7 veterinary support for our rescued residents.</p>
+    <section id="about" class="container">
+        <h2>Our Mission</h2>
+        <p>We are dedicated to the welfare of cows, providing them with a life of dignity, health, and love. Our sanctuary is a safe haven for those rescued from neglect.</p>
+    </section>
+
+    <section id="services" class="services-section">
+        <div class="container">
+            <h2>Our Services</h2>
+            <div class="grid">
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1546445317-29f4545e9d53?w=500" alt="Care">
+                    <h3>Daily Nutrition</h3>
+                    <p>Providing balanced nutrition and fresh water daily for 100+ cows.</p>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?w=500" alt="Med">
+                    <h3>Medical Seva</h3>
+                    <p>On-site veterinary support for treatment and regular health checkups.</p>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1597916829826-02e5bb4c54e0?w=500" alt="Farm">
+                    <h3>Organic Farming</h3>
+                    <p>Promoting sustainable Vedic farming and organic fertilizer production.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <footer id="contact">
-        <div class="footer-info">
-            <h2>Contact Us</h2>
-            <p>📍 Main Road, Gaoshala Sanctuary</p>
+        <div class="container">
+            <h2>Connect With Us</h2>
+            <p>📍 Main Sanctuary Road, Gaoshala Village</p>
             <p>📞 +91 98765 43210</p>
+            <p>✉️ help@gaoshala.org</p>
+            <div class="footer-bottom">
+                <p>&copy; 2026 GaoshalaCare. All Rights Reserved.</p>
+            </div>
         </div>
     </footer>
+
 </body>
 </html>
