--- a/index.html
+++ b/index.html
@@ -3,65 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaoshala - Cow Welfare Sanctuary</title>
+    <title>Neem Karori Baba Gau Sewa - Noida</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="logo">Gaoshala<span>Care</span></div>
+        <div class="logo">Gau<span>Sewa</span></div>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#gallery">Our Gallery</a></li>
+            <li><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
 
     <header id="home" class="hero">
         <div class="hero-content">
-            <h1>Protecting our Sacred Mother</h1>
-            <p>Providing a lifelong home and medical care for abandoned and elderly cows.</p>
-            <a href="#contact" class="btn">Donate Now</a>
+            <h1>Sanctuary for over 500 sacred cows in Noida</h1>
+            <p>Providing food, shelter, and medical care to these gentle beings.</p>
+            <div class="hero-btns">
+                <a href="#donate" class="btn-orange">Donate Now ♡</a>
+                <a href="#about" class="btn-outline">Our Mission</a>
+            </div>
         </div>
     </header>
 
-    <section id="about" class="container">
-        <h2>Our Mission</h2>
-        <p>We are dedicated to the welfare of cows, providing them with a life of dignity, health, and love. Our sanctuary is a safe haven for those rescued from neglect.</p>
-    </section>
-
-    <section id="services" class="services-section">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="grid">
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1546445317-29f4545e9d53?w=500" alt="Care">
-                    <h3>Daily Nutrition</h3>
-                    <p>Providing balanced nutrition and fresh water daily for 100+ cows.</p>
-                </div>
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?w=500" alt="Med">
-                    <h3>Medical Seva</h3>
-                    <p>On-site veterinary support for treatment and regular health checkups.</p>
-                </div>
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1597916829826-02e5bb4c54e0?w=500" alt="Farm">
-                    <h3>Organic Farming</h3>
-                    <p>Promoting sustainable Vedic farming and organic fertilizer production.</p>
+    <section id="donate" class="campaigns">
+        <span class="sub-title">HOW YOU CAN HELP</span>
+        <h2 class="main-title">FEATURED CAMPAIGNS</h2>
+        <p class="desc">Choose a cause that resonates with you. Every donation, big or small, makes a significant difference in a cow's life.</p>
+        
+        <div class="campaign-grid">
+            <div class="campaign-card">
+                <img src="https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?w=500" alt="Fodder">
+                <div class="card-body">
+                    <h3>GREEN FODDER SEWA</h3>
+                    <p>Contribute towards daily green fodder. Just ₹500 can feed 20 cows a nutritious meal.</p>
+                    <div class="card-footer">
+                        <span class="any-amount">Any Amount</span>
+                        <button class="donate-btn">Donate</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <footer id="contact">
-        <div class="container">
-            <h2>Connect With Us</h2>
-            <p>📍 Main Sanctuary Road, Gaoshala Village</p>
-            <p>📞 +91 98765 43210</p>
-            <p>✉️ help@gaoshala.org</p>
-            <div class="footer-bottom">
-                <p>&copy; 2026 GaoshalaCare. All Rights Reserved.</p>
+        <div class="footer-grid">
+            <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Our Gallery</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="footer-contact">
+                <p>📍 Neem Karori Baba Gau Sewa, Sector-144, Greater Noida 201306</p>
+                <p>📞 +91 9811319139</p>
+                <p>✉️ info@sammaan.ngo</p>
             </div>
         </div>
     </footer>
