--- a/index.html
+++ b/index.html
@@ -5,36 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neem Karori Baba Gau Sewa - Noida</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar">
         <div class="logo">Gau<span>Sewa</span></div>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#gallery">Our Gallery</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Our Gallery</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
 
-    <header id="home" class="hero">
+    <header class="hero">
         <div class="hero-content">
-            <h1>Sanctuary for over 500 sacred cows in Noida</h1>
+            <h1>Sanctuary for over 500 sacred cows in Noida.</h1>
             <p>Providing food, shelter, and medical care to these gentle beings.</p>
             <div class="hero-btns">
-                <a href="#donate" class="btn-orange">Donate Now ♡</a>
-                <a href="#about" class="btn-outline">Our Mission</a>
+                <a href="#" class="btn-donate">Donate Now ♡</a>
+                <a href="#" class="btn-mission">Our Mission</a>
             </div>
         </div>
     </header>
 
-    <section id="donate" class="campaigns">
-        <span class="sub-title">HOW YOU CAN HELP</span>
-        <h2 class="main-title">FEATURED CAMPAIGNS</h2>
-        <p class="desc">Choose a cause that resonates with you. Every donation, big or small, makes a significant difference in a cow's life.</p>
-        
+    <section class="campaigns">
+        <span class="sub-heading">HOW YOU CAN HELP</span>
+        <h2 class="main-heading">FEATURED CAMPAIGNS</h2>
+        <p class="intro-text">Choose a cause that resonates with you. Every donation, big or small, makes a significant difference in a cow's life.</p>
+
         <div class="campaign-grid">
             <div class="campaign-card">
                 <img src="https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?w=500" alt="Fodder">
@@ -43,15 +43,15 @@
                     <p>Contribute towards daily green fodder. Just ₹500 can feed 20 cows a nutritious meal.</p>
                     <div class="card-footer">
                         <span class="any-amount">Any Amount</span>
-                        <button class="donate-btn">Donate</button>
+                        <button class="donate-small-btn">Donate</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer id="contact">
-        <div class="footer-grid">
+    <footer class="footer">
+        <div class="footer-container">
             <div class="footer-links">
                 <a href="#">Home</a>
                 <a href="#">About Us</a>
