--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="logo">Gau<span>Sewa</span></div>
+        <div class="logo">GauShala</div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
@@ -21,14 +21,49 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>Sanctuary for over 500 sacred cows in Noida.</h1>
-            <p>Providing food, shelter, and medical care to these gentle beings.</p>
+            <h1>Neem Karori Baba Gau Seva</h1>
+            <p>A loving home for over 500 sacred cows in Noida. Your support provides food, shelter, and medical care to these gentle souls.</p>
             <div class="hero-btns">
-                <a href="#" class="btn-donate">Donate Now ♡</a>
-                <a href="#" class="btn-mission">Our Mission</a>
+                <a href="#" class="btn-donate">Donate Now</a>
+                <a href="#" class="btn-mission">Our Mission →</a>
             </div>
         </div>
+        <img src="https://images.unsplash.com/photo-1596733261625-724a87c9c0dc?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80" alt="Cow Shelter" class="hero-image">
     </header>
+
+    <section class="mission">
+        <div class="mission-content">
+            <span class="sub-heading">OUR MISSION</span>
+            <h2 class="main-heading">Rescuing, Protecting, and Nurturing Cows</h2>
+            <p>In Indian culture, the cow is revered as 'Gau Mata'. However, many are left abandoned on the streets, injured, or starving. Our Goshala provides a sanctuary for these innocent souls, offering them love, care, and a dignified life.</p>
+            
+            <div class="mission-points">
+                <div class="point">✓ Providing shelter to abandoned cows</div>
+                <div class="point">✓ 24/7 Medical care for injured animals</div>
+                <div class="point">✓ Organic farming using Panchagavya</div>
+                <div class="point">✓ Promoting Desi Cow breeds</div>
+            </div>
+
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <h3>1500+</h3>
+                    <p>Cows Protected</p>
+                </div>
+                <div class="stat-card">
+                    <h3>500+</h3>
+                    <p>Injured Cows Treated</p>
+                </div>
+                <div class="stat-card">
+                    <h3>5000+</h3>
+                    <p>Daily Meals Served</p>
+                </div>
+                <div class="stat-card">
+                    <h3>24/7</h3>
+                    <p>Medical Emergency</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="campaigns">
         <span class="sub-heading">HOW YOU CAN HELP</span>
@@ -37,12 +72,36 @@
 
         <div class="campaign-grid">
             <div class="campaign-card">
-                <img src="https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?w=500" alt="Fodder">
+                <img src="https://images.unsplash.com/photo-1570042225831-d98fa7577f1e?w=500" alt="Adopt a Cow">
                 <div class="card-body">
-                    <h3>GREEN FODDER SEWA</h3>
+                    <h3>Adopt a Cow</h3>
+                    <p>Sponsor the complete care of one cow for a month or year. Includes food, medicine, and shelter.</p>
+                    <div class="card-footer">
+                        <span class="price">₹2,500 / month</span>
+                        <button class="donate-small-btn">Donate</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="campaign-card">
+                <img src="https://images.unsplash.com/photo-1523413651479-596eb2635e93?w=500" alt="Green Fodder Sewa">
+                <div class="card-body">
+                    <h3>Green Fodder Sewa</h3>
                     <p>Contribute towards daily green fodder. Just ₹500 can feed 20 cows a nutritious meal.</p>
                     <div class="card-footer">
-                        <span class="any-amount">Any Amount</span>
+                        <span class="price">Any Amount</span>
+                        <button class="donate-small-btn">Donate</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="campaign-card">
+                <img src="https://images.unsplash.com/photo-1584308666744-24d5f400f6f8?w=500" alt="Medical Relief Fund">
+                <div class="card-body">
+                    <h3>Medical Relief Fund</h3>
+                    <p>Support critical surgeries and treatments for injured cows rescued from accidents.</p>
+                    <div class="card-footer">
+                        <span class="price">₹1,000 onwards</span>
                         <button class="donate-small-btn">Donate</button>
                     </div>
                 </div>
@@ -52,16 +111,32 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Our Gallery</a>
-                <a href="#">Contact Us</a>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our Gallery</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
             </div>
-            <div class="footer-contact">
-                <p>📍 Neem Karori Baba Gau Sewa, Sector-144, Greater Noida 201306</p>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>📍 Neem Karori Baba Gau Sewa,Sector-144, Greater Noida - 201306</p>
                 <p>📞 +91 9811319139</p>
                 <p>✉️ info@sammaan.ngo</p>
+            </div>
+            <div class="footer-section">
+                <h4>Support Us</h4>
+                <p>Your contribution can save a life today.</p>
+                <a href="#" class="btn-donate-footer">Donate Now</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2026 GauShala. All rights reserved. | UNDER SAMMAAN FOUNDATION</p>
+            <div class="footer-links-bottom">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
             </div>
         </div>
     </footer>
