--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
         </div>
     </section>
 
+    <!-- Quick Actions Section -->
+    <section class="quick-actions">
+        <div class="quick-actions-container">
+            <a href="#" class="action-btn action-donate">
+                <span class="action-icon">🐄</span>
+                <span class="action-text">Donate a Cow</span>
+            </a>
+            <a href="#" class="action-btn action-feed">
+                <span class="action-icon">❤️</span>
+                <span class="action-text">Feed a Cow</span>
+            </a>
+            <a href="#" class="action-btn action-heal">
+                <span class="action-icon">⚕️</span>
+                <span class="action-text">Heal a Cow</span>
+            </a>
+            <a href="#" class="action-btn action-whatsapp">
+                <span class="action-icon">💬</span>
+                <span class="action-text">WhatsApp</span>
+            </a>
+        </div>
+    </section>
+
     <!-- Mission Section -->
     <section class="mission">
         <div class="mission-container">
