--- a/index.html
+++ b/index.html
@@ -53,27 +53,98 @@
         </div>
     </section>
 
-    <!-- Quick Actions Section -->
-    <section class="quick-actions">
-        <div class="quick-actions-container">
-            <a href="#" class="action-btn action-donate">
-                <span class="action-icon">🐄</span>
-                <span class="action-text">Donate a Cow</span>
-            </a>
-            <a href="#" class="action-btn action-feed">
-                <span class="action-icon">❤️</span>
-                <span class="action-text">Feed a Cow</span>
-            </a>
-            <a href="#" class="action-btn action-heal">
-                <span class="action-icon">⚕️</span>
-                <span class="action-text">Heal a Cow</span>
-            </a>
-            <a href="#" class="action-btn action-whatsapp">
-                <span class="action-icon">💬</span>
-                <span class="action-text">WhatsApp</span>
-            </a>
+    <!-- Quick Actions Buttons (Floating) -->
+    <div class="quick-actions-floating">
+        <button class="action-btn-floating action-donate-btn" data-modal="donate-modal">
+            <span class="action-icon">🐄</span>
+            <span class="action-text">Donate a Cow</span>
+        </button>
+        <button class="action-btn-floating action-feed-btn" data-modal="feed-modal">
+            <span class="action-icon">❤️</span>
+            <span class="action-text">Feed a Cow</span>
+        </button>
+        <button class="action-btn-floating action-heal-btn" data-modal="heal-modal">
+            <span class="action-icon">⚕️</span>
+            <span class="action-text">Heal a Cow</span>
+        </button>
+        <button class="action-btn-floating action-whatsapp-btn" data-modal="whatsapp-modal">
+            <span class="action-icon">💬</span>
+            <span class="action-text">WhatsApp</span>
+        </button>
+    </div>
+
+    <!-- Modals -->
+    <!-- Donate a Cow Modal -->
+    <div id="donate-modal" class="modal">
+        <div class="modal-overlay" onclick="closeModal('donate-modal')"></div>
+        <div class="modal-content">
+            <button class="modal-close" onclick="closeModal('donate-modal')">&times;</button>
+            <div class="modal-header">
+                <span class="modal-icon">🐄</span>
+                <h2>Donate a Cow</h2>
+            </div>
+            <p class="modal-description">Sponsor the complete care of one cow for a month or year. Includes food, medicine, and shelter.</p>
+            <div class="modal-details">
+                <p><strong>₹2,500 / month</strong></p>
+                <p>Your contribution provides food, veterinary care, and a safe shelter for one sacred cow.</p>
+            </div>
+            <a href="#" class="modal-donate-btn">Proceed to Donate</a>
         </div>
-    </section>
+    </div>
+
+    <!-- Feed a Cow Modal -->
+    <div id="feed-modal" class="modal">
+        <div class="modal-overlay" onclick="closeModal('feed-modal')"></div>
+        <div class="modal-content">
+            <button class="modal-close" onclick="closeModal('feed-modal')">&times;</button>
+            <div class="modal-header">
+                <span class="modal-icon">❤️</span>
+                <h2>Feed a Cow</h2>
+            </div>
+            <p class="modal-description">Contribute towards daily green fodder and nutritious meals for our cows.</p>
+            <div class="modal-details">
+                <p><strong>₹500 / meal</strong></p>
+                <p>Just ₹500 can feed 20 cows a complete nutritious meal. Help us provide fresh, organic fodder daily.</p>
+            </div>
+            <a href="#" class="modal-donate-btn">Contribute Now</a>
+        </div>
+    </div>
+
+    <!-- Heal a Cow Modal -->
+    <div id="heal-modal" class="modal">
+        <div class="modal-overlay" onclick="closeModal('heal-modal')"></div>
+        <div class="modal-content">
+            <button class="modal-close" onclick="closeModal('heal-modal')">&times;</button>
+            <div class="modal-header">
+                <span class="modal-icon">⚕️</span>
+                <h2>Heal a Cow</h2>
+            </div>
+            <p class="modal-description">Support critical surgeries and emergency treatments for injured cows.</p>
+            <div class="modal-details">
+                <p><strong>₹1,000 onwards</strong></p>
+                <p>Every contribution helps provide immediate medical care, surgeries, and recovery support for rescued and injured cows.</p>
+            </div>
+            <a href="#" class="modal-donate-btn">Support Medical Care</a>
+        </div>
+    </div>
+
+    <!-- WhatsApp Modal -->
+    <div id="whatsapp-modal" class="modal">
+        <div class="modal-overlay" onclick="closeModal('whatsapp-modal')"></div>
+        <div class="modal-content">
+            <button class="modal-close" onclick="closeModal('whatsapp-modal')">&times;</button>
+            <div class="modal-header">
+                <span class="modal-icon">💬</span>
+                <h2>Connect on WhatsApp</h2>
+            </div>
+            <p class="modal-description">Get updates, ask questions, and stay connected with our Gau Seva mission.</p>
+            <div class="modal-details">
+                <p><strong>+91 9811319139</strong></p>
+                <p>Message us directly to learn more, share feedback, or arrange a visit to our Goshala.</p>
+            </div>
+            <a href="https://wa.me/919811319139" target="_blank" class="modal-donate-btn">Open WhatsApp</a>
+        </div>
+    </div>
 
     <!-- Mission Section -->
     <section class="mission">
@@ -223,5 +294,53 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        // Modal Functions
+        function openModal(modalId) {
+            const modal = document.getElementById(modalId);
+            if (modal) {
+                modal.classList.add('active');
+                document.body.style.overflow = 'hidden';
+            }
+        }
+
+        function closeModal(modalId) {
+            const modal = document.getElementById(modalId);
+            if (modal) {
+                modal.classList.remove('active');
+                document.body.style.overflow = 'auto';
+            }
+        }
+
+        // Event listeners for action buttons
+        document.querySelectorAll('.action-btn-floating').forEach(button => {
+            button.addEventListener('click', function() {
+                const modalId = this.getAttribute('data-modal');
+                openModal(modalId);
+            });
+        });
+
+        // Close modal on Escape key
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                document.querySelectorAll('.modal.active').forEach(modal => {
+                    modal.classList.remove('active');
+                });
+                document.body.style.overflow = 'auto';
+            }
+        });
+
+        // Smooth scroll for nav links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({ behavior: 'smooth' });
+                }
+            });
+        });
+    </script>
 </body>
 </html>
