--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <!-- Header/Navigation -->
     <header class="navbar">
         <div class="navbar-container">
-            <a href="#" class="navbar-logo">
+            <a href="index.html" class="navbar-logo">
                 Gao<span class="logo-green">Shala</span>
             </a>
             <nav class="navbar-menu">
-                <a href="#" class="nav-link">Home</a>
-                <a href="#" class="nav-link">About</a>
-                <a href="#" class="nav-link">Gallery</a>
-                <a href="#" class="nav-link">Contact</a>
-                <a href="#" class="nav-donate">Donate Now</a>
+                <a href="index.html" class="nav-link active">Home</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="gallery.html" class="nav-link">Gallery</a>
+                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="donate.html" class="nav-donate">Donate Now</a>
             </nav>
             <button class="mobile-toggle" aria-label="Toggle menu">
                 <span></span>
@@ -42,13 +42,13 @@
             <h1 class="hero-title">Neem Karori Baba <span class="title-highlight">Gau Seva</span></h1>
             <p class="hero-subtitle">A loving home for over 500 sacred cows in Noida. Your support provides food, shelter, and medical care to these gentle souls.</p>
             <div class="hero-buttons">
-                <a href="#" class="btn btn-primary">
+                <a href="donate.html" class="btn btn-primary">
                     <span>Donate Now</span>
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
                     </svg>
                 </a>
-                <a href="#" class="btn btn-secondary">Our Mission</a>
+                <a href="about.html" class="btn btn-secondary">Our Mission</a>
             </div>
         </div>
     </section>
